--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@types/selenium-webdriver": "2.53.39",
     "allure-commandline": "1.5.0",
     "chai": "4.1.2",
+    "chai-as-promised": "7.1.1",
     "mocha": "3.3.0",
     "mocha-allure-reporter": "1.3.2",
     "mocha-multi": "1.0.1",
     "protractor": "5.3.0",
-    "typescript": "2.8.1"
+    "typescript": "2.8.1",
+    "uuid": "3.2.1"
   }
 }
